aws/deploy-main-services-in-aws-with-terraform/security_group.tf
resource "aws_security_group" "default_security" {
  name          = "default_security"
  description   = "Allow basic access to servers"
  vpc_id        = local.vpc_id

  ingress {
    description = "SSH from OtherNetwork"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [ local.myothernetwork_cidr, local.externaldevopsnode_cidr  ]
  }

  ingress {
    description = "SNMP from OtherNetwork"
    from_port   = 161
    to_port     = 161
    protocol    = "udp"
    cidr_blocks = [ local.myothernetwork_cidr ]
  }

  ingress {
    description = "WINDMILL from OtherNetwork"
    from_port   = 6969
    to_port     = 6969
    protocol    = "tcp"
    cidr_blocks = [ local.myothernetwork_cidr ]
  }

  ingress {
    description = "Jenkins from OtherNetwork"
    from_port   = 8443
    to_port     = 8443
    protocol    = "tcp"
    cidr_blocks = [ local.myothernetwork_cidr ]
  }

  ingress {
    description = "HTTP from OtherNetwork"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [ local.myothernetwork_cidr ]
  }

  ingress {
    description = "HTTPS from OtherNetwork"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [ local.myothernetwork_cidr ]
  }

  ingress {
    description = "Postgres from OtherNetwork"
    from_port   = 5432
    to_port     = 5342
    protocol    = "tcp"
    cidr_blocks = [ local.myothernetwork_cidr ]
  }

  ingress {
    description = "ICMP"
    from_port   = 0
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = [ "0.0.0.0/0" ] # Allow traffic from any IPv4 Address
  }

  egress {
    description = "Outbound traffic to Anywhere"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [ "0.0.0.0/0" ]
  }

  tags = {
    Name = "default_security"
  }
}
